# QtPi_Kiosk

./: .gitignore  AppState.qml  CLOUD_FLARE_DEPLOYMENT.md  CMakeLists.txt  Main.qml  blebarcodeclient.cpp  blebarcodeclient.h  inventorymanager.cpp  inventorymanager.h  main.cpp  productlookup.cpp  productlookup.h  webuiserver.cpp  webuiserver.h
.qtcreator/: CMakeLists.txt.user.24f6f5a
components/: BarcodeWedge.qml
screens/: SavedScreen.qml  ScanScreen.qml
web/: app.js  dashboard.html  login.html  styles.css
